# smart-guitar

./: .gitignore  AGENTS.md  ARCHITECTURE.md  POST.md  docker-compose.promtail.yml  justfile  pyproject.toml  pyrightconfig.json  smart-guitar-ads-guide.html
backend/: .secrets.yaml  API.md  Dockerfile  Dockerfile.job-orchestrator  Dockerfile.stale-job-sweeper  Dockerfile.unconfirmed-user-cleanup  Dockerfile.vocals-guitar-stitch  PLAN_TABS.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  002_youtube_id_nullable.py  003_favorites_table.py  004_song_file_paths.py  15c28a46dde0_add_guitar_removed_key_to_songs.py  3b7d2b6c0e1a_add_job_progress_and_stage.py  4a8e3f1d9c2b_add_lyrics_key_to_songs.py  5b9f4a2e7d3c_add_cascade_delete_to_jobs_song_fk.py  6c4f5a8b2d1e_add_genre_and_play_count_to_songs.py  8c3433556813_add_cascade_delete_to_favorites.py  9a1b2c3d4e5f_add_like_count_to_songs.py  a2b3c4d5e6f7_add_ranking_indexes.py  b3c4d5e6f7a8_add_tabs_key_to_songs.py  c4d5e6f7a8b9_add_subscriptions_and_trial.py  d5e6f7a8b9c0_add_vocals_guitar_key_to_songs.py  e6f7a8b9c0d1_add_lyrics_quick_key_to_songs.py  f7a8b9c0d1e2_add_processing_lock_columns.py  g8a9b0c1d2e3_add_provider_to_subscriptions.py  h9b0c1d2e3f4_add_download_requested_at_to_songs.py  i0c1d2e3f4g5_add_lyrics_corrected_to_songs.py  j1d2e3f4g5h6_add_lyrics_heal_version_to_songs.py  k2a3b4c5d6e7_create_analytics_events.py  l3b4c5d6e7f8_add_external_strums_columns.py  m4c5d6e7f8g9_add_has_seen_onboarding_to_users.py  n5d6e7f8g9h0_add_web_chords_columns.py  o6e7f8g9h0i1_create_chord_version_votes.py  p7f8g9h0i1j2_add_static_chords_columns.py
backend/config/: base.config.yml  local.config.yml  prod.config.yml  test.config.yml
backend/scripts/: admin_runner.py  backfill_genres.py  cleanup_live_media.py  export_seed_songs.py  merge_lyrics_with_llm.py  seed_db.py
backend/src/guitar_player/: app_state.py  config.py  constants.py  database.py  dependencies.py  enums.py  exceptions.py  job_status_manifest.py  main.py  middleware.py  request_context.py  storage.py
backend/src/guitar_player/auth/: admin.py  analytics_guard.py  cognito.py  dependencies.py  schemas.py  subscription_guard.py
backend/src/guitar_player/dao/: analytics_dao.py  base.py  chord_vote_dao.py  favorite_dao.py  job_dao.py  song_dao.py  subscription_dao.py  user_dao.py
backend/src/guitar_player/lambdas/: __init__.py  job_orchestrator.py  runtime.py  stale_job_sweeper.py  unconfirmed_user_cleanup.py  vocals_guitar_stitch.py
backend/src/guitar_player/models/: __init__.py  analytics_event.py  base.py  chord_vote.py  favorite.py  job.py  song.py  subscription.py  user.py
backend/src/guitar_player/routers/: admin.py  analytics.py  auth.py  favorites.py  health.py  jobs.py  songs.py  subscription.py
backend/src/guitar_player/schemas/: admin.py  analytics.py  auth.py  common.py  favorite.py  job.py  records.py  song.py  subscription.py
backend/src/guitar_player/services/: admin_service.py  allpay_provider.py  analytics_helpers.py  analytics_service.py  artwork_service.py  audio_merge.py  audio_normalize.py  chord_merger.py  cognito_auth_service.py  external_strum_fetcher.py  favorite_service.py  gemini_chord_service.py  job_service.py  lambda_invoke.py  llm_service.py  llm_utils.py  lyrics_correction.py  payment_provider.py  processing_service.py  recommendation_service.py  seed_service.py  seed_songs.json  song_service.py  source_match.py  strum_aligner.py  subscription_service.py  (+4 more)
backend/tests/: conftest.py  test_admin_tabs.py  test_allpay_provider.py  test_artwork_service.py  test_audio_merge.py  test_auth.py  test_download_and_parse.py  test_downstream_request_context.py  test_favorites.py  test_full_flow.py  test_idempotent_job.py  test_jobs_stems_and_lyrics.py  test_processing_lock.py  test_recommendations.py  test_registration_notifications.py  test_request_context.py  test_search.py  test_song_detail_tabs.py  test_song_selection.py  test_source_match.py  test_static_chords.py  test_subscription_router.py  test_telegram.py  test_tutorial_link_selection.py  test_unconfirmed_user_cleanup.py
chords_generator/: API.md  Dockerfile  README.md  pyproject.toml
chords_generator/config/: base.config.yml
chords_generator/scripts/: verify_simplified_chords.py
chords_generator/src/chords_generator/: api.py  config.py  recognizer.py  request_context.py  schemas.py  simplifier.py  storage.py
chords_generator/tests/: conftest.py  test_api.py  test_simplifier.py
inference_demucs/: API.md  Dockerfile  pyproject.toml
inference_demucs/config/: base.config.yml  dev.config.yml  prod.config.yml  test.config.yml
inference_demucs/src/inference_demucs/: api.py  config.py  request_context.py  runner.py  schemas.py  separator.py  storage.py
inference_demucs/tests/: conftest.py  test_api.py  test_output_path.py
lyrics_generator/: Dockerfile  pyproject.toml
lyrics_generator/config/: base.config.yml  local.config.yml  prod.config.yml  test.config.yml
lyrics_generator/src/lyrics_generator/: api.py  config.py  detect_language.py  genius_fetcher.py  lrc_parser.py  lyrics_fetcher.py  onset_aligner.py  openai_transcriber.py  request_context.py  schemas.py  storage.py  text_corrector.py  transcriber.py
lyrics_generator/tests/: conftest.py  test_api.py  test_config.py  test_detect_language.py  test_fetch_and_align.py  test_genius_fetcher.py  test_genius_integration.py  test_lrc_parser.py  test_lyrics_fetcher.py  test_onset_aligner.py  test_openai_transcriber.py  test_text_corrector.py
tabs_generator/: API.md  Dockerfile  PLAN.md  pyproject.toml
tabs_generator/config/: base.config.yml  local.config.yml  prod.config.yml
tabs_generator/src/tabs_generator/: api.py  audio_cleaner.py  beat_detector.py  config.py  external_strum_parser.py  note_processor.py  request_context.py  schemas.py  storage.py  strum_aligner.py  strum_detector.py  tab_converter.py  transcriber.py
tabs_generator/tests/: conftest.py  test_api.py  test_audio_cleaner.py  test_note_processor.py  test_strum_detector.py  test_tab_converter.py
(+354 files in other folders)
