[project]
name = "guitar-player"
version = "0.1.0"
description = "Guitar learning web app with AI-powered audio separation"
requires-python = ">=3.13"
dependencies = [
    "boto3==1.42.53",
    "huggingface-hub==1.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
