[project]
name = "guitar-player-backend"
version = "0.1.0"
description = "FastAPI backend for Guitar Player"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.129.0",
    "mangum==0.21.0",
    "uvicorn[standard]==0.41.0",
    "awslambdaric==4.0.0",
    "sqlalchemy[asyncio]==2.0.46",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    "pydantic==2.12.5",
    "pyyaml==6.0.3",
    "boto3==1.42.53",
    "python-jose[cryptography]==3.5.0",
    "yt-dlp==2026.3.3",
    "bgutil-ytdlp-pot-provider==1.2.2",
    "httpx==0.28.1",
    "psycopg2-binary==2.9.11",
    "email-validator==2.3.0",
    "openai==2.21.0",
    "google-genai==1.68.0",
    "requests==2.32.5",
    "python-json-logger==4.0.0",
    "curl-cffi>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.2",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-timeout==2.4.0",
    "aiosqlite==0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guitar_player"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
extraPaths = ["src"]
