[project]
name = "guitar-player-chords-generator"
version = "0.1.0"
description = "Chord recognition service using autochord"
requires-python = ">=3.10"
dependencies = [
    "setuptools==80.10.2",
    "numpy==2.2.6",
    "tf-keras==2.20.1",
    "autochord==0.1.4",
    "fastapi==0.129.0",
    "uvicorn[standard]==0.41.0",
    "boto3==1.42.53",
    "pyyaml==6.0.3",
    "pydantic==2.12.5",
    "mangum==0.21.0",
    "pychord==1.3.2",
    "python-json-logger==4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
    "moto[s3]==5.1.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chords_generator"]

# vamp's setup.py imports numpy/setuptools at build time without declaring
# them as build deps. Disable build isolation so it uses the environment's.
[tool.uv]
no-build-isolation-package = ["vamp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
extraPaths = ["src"]
