[project]
name = "guitar-player-inference-demucs"
version = "0.1.0"
description = "Demucs-based audio source separation for local inference"
requires-python = ">=3.10"
dependencies = [
    "demucs==4.0.1",
    # torchaudio>=2.4 uses TorchCodec for decoding (demucs calls torchaudio.load).
    # Without this, separation fails at runtime with ImportError: TorchCodec is required.
    "torchcodec==0.10.0",
    "soundfile==0.13.1",
    "numpy==2.2.6",
    "fastapi==0.129.0",
    "uvicorn[standard]==0.41.0",
    "boto3==1.42.53",
    "pyyaml==6.0.3",
    "pydantic==2.12.5",
    "python-json-logger==4.0.0",
    "mangum==0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
    "moto[s3]==5.1.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inference_demucs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
extraPaths = ["src"]