[project]
name = "guitar-player-lyrics-generator"
version = "0.1.0"
description = "Lyrics transcription service using WhisperX (wav2vec2 forced alignment)"
requires-python = ">=3.10"
dependencies = [
    "whisperx==3.8.1",
    "fastapi==0.129.0",
    "uvicorn[standard]==0.41.0",
    "boto3==1.42.54",
    "pyyaml==6.0.3",
    "pydantic==2.12.5",
    "mangum==0.21.0",
    "python-json-logger==4.0.0",
    "openai==2.24.0",
    "httpx==0.28.1",
    "curl_cffi==0.14.0",
    "beautifulsoup4==4.14.3",
    "langdetect==1.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
]

[tool.uv]
override-dependencies = [
    # Exclude torchcodec: transitive dep from pyannote-audio that has ABI
    # mismatch with torch 2.8. Not needed -- pyannote falls back to torchaudio.
    "torchcodec ; python_version < '0'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lyrics_generator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit real external APIs (Genius, etc.)",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
extraPaths = ["src"]
