[project]
name = "guitar-player-tabs-generator"
version = "0.1.0"
description = "Guitar tab transcription service using basic-pitch"
requires-python = ">=3.10"
dependencies = [
    "setuptools==80.10.2",
    "basic-pitch[onnx]==0.4.0",
    "numpy==1.26.4",
    "librosa==0.11.0",
    "scipy==1.15.3",
    "soundfile==0.13.1",
    "fastapi==0.130.0",
    "uvicorn[standard]==0.41.0",
    "boto3==1.42.54",
    "pyyaml==6.0.3",
    "pydantic==2.12.5",
    "mangum==0.21.0",
    "python-json-logger==4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tabs_generator"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
extraPaths = ["src"]
